# vollab

./: .gitignore  CLAUDE.md  PRD.md  main.py  pyproject.toml
app/data/: cache.py  provider.py  snapshot_refresh.py
app/data/snapshots/: AAPL.json  SPY.json
app/engine/: black_scholes.py  calibrate.py  greeks_fd.py  heston.py  implied_vol.py  surface.py  svi.py
app/routes/: about.py  calibration.py  chain.py  greeks.py  home.py  pricer.py  surface.py
app/static/: style.css
app/templates/: about.html  base.html  calibration.html  chain.html  greeks.html  home.html  pricer.html  surface.html
app/templates/partials/: convergence.html  pricer_result.html  ticker_nav.html
tests/: test_black_scholes.py  test_calibrate.py  test_greeks_fd.py  test_heston.py  test_implied_vol.py  test_svi.py
