[project]
name = "vollab"
version = "0.1.0"
description = "Options Pricing & Calibration Workbench"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "yfinance>=0.2.40",
    "httpx>=0.28.0",
]

[project.scripts]
refresh-snapshots = "app.data.snapshot_refresh:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
